<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="me.akshay.arclothing.ui.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/start_gredient"
        tools:ignore="smallSp">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:background="@color/overlay"
        android:contentDescription="@string/developer_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_string"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="cursive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/app_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:transitionName="@string/title_transition"
                android:textSize="43sp"
                android:fontFamily="cursive"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/login_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/white_btn_bg"
                android:layout_marginTop="32dp">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:ems="10"
                    android:textColorHint="@color/semi_white"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:autofillHints="null"
                    android:paddingTop="@dimen/dimen_12dp"
                    android:paddingEnd="@dimen/dimen_12dp"
                    android:paddingBottom="@dimen/dimen_12dp"
                    android:paddingStart="18dp"
                    android:hint="@string/enter_your_number"/>

                <TextView
                    android:id="@+id/tv_get_otp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/blue_right_curve"
                    android:textColor="@color/white"
                    android:text="@string/get_otp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/white_btn_bg"
            android:textAlignment="center"
            android:layout_margin="28dp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/start_start"
            android:text="@string/google_sign_in_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/bottom_layout"/>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presented_by"
                android:textColor="@color/semi_white"
                android:textSize="9sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_name"
                android:textSize="16sp"
                android:textColor="@color/semi_white"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/common_desc"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/login_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/login_layout"
            app:layout_constraintTop_toTopOf="@id/login_layout"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>