<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="me.akshay.arclothing.ui.start.StartViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/start_gredient"
            android:background="@color/transparent"
            android:contentDescription="@string/developer_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/app_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:fontFamily="cursive"
            android:textSize="@dimen/dimen_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/start_progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loader.json"
            app:lottie_loop="true"
            android:transitionName="@string/title_transition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/offline_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="YOU ARE OFFLINE..."
            android:textAlignment="center"
            android:textSize="12sp"
            android:padding="8dp"
            android:textColor="@color/semi_white"
            android:textStyle="bold"
            android:visibility="gone"
            android:background="@color/error_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>