<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/count_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@+id/cart_iv"
                        app:layout_constraintEnd_toEndOf="@id/cart_iv"
                        app:layout_constraintTop_toTopOf="@id/cart_iv"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="5dp">
                        <LinearLayout
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp">
                            <TextView
                                android:id="@+id/cart_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zero_text"
                                android:fontFamily="monospace"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                tools:ignore="smallSp"/>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/vp_slider_main"
                        android:layout_width="0dp"
                        android:layout_height="340dp"
                        android:focusableInTouchMode="true"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                    </androidx.viewpager.widget.ViewPager>

                    <!--START OF DOTS CONTAINER-->
                    <LinearLayout
                        android:id="@+id/layout_slider_main_dots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="@null"
                        app:layout_constraintStart_toStartOf="parent"
                        android:gravity="start"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp">

                    </LinearLayout>
                    <!--END OF DOTS CONTAINER-->

                    <ImageView
                        android:id="@+id/cart_iv"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:elevation="4dp"
                        android:src="@drawable/ic_shopping_bags"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="42dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/image_view_description"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/text_view_featured_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/feature_product"
                    android:textSize="17sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_feature_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/text_view_popular_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/top_offers"
                    android:textSize="17sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clipToPadding="false"
                    android:paddingStart="6dp"
                    android:paddingEnd="6sp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/text_view_recent_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/popular_products"
                    android:textSize="17sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_p_detail_product_grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingStart="1dp"
                    android:paddingEnd="@dimen/dimen_0dp"
                    android:layout_marginBottom="12dp" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/start_start"
                    android:indeterminateTintMode="src_atop"
                    android:progressDrawable="@drawable/bg_progress_bar"
                    android:visibility="invisible" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
