<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="me.akshay.arclothing.ui.search.SearchViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ui.search.SearchActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:background="@color/white">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                app:expandedTitleGravity="top"
                android:elevation="0dp"
                app:contentScrim="@color/white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    app:layout_anchorGravity="bottom"
                    app:layout_collapseMode="parallax"
                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                    <TextView
                        android:id="@+id/search_head"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/search"
                        android:gravity="bottom|center"
                        android:textSize="32sp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="14dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="6dp"
                app:cardBackgroundColor="@color/lightPink"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/et_seach_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="24dp"
                        android:layout_toStartOf="@id/btn_search"
                        android:background="@null"
                        android:hint="@string/search_here"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/trans_black" />

                    <ImageButton
                        android:id="@+id/btn_search"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:background="@null"
                        android:src="@drawable/ic_round_search"
                        app:tint="@color/start_start" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appBarLayout"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/layout_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_no_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_products_found"
                    android:textAlignment="center"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:padding="16dp"/>
                <TextView
                    android:id="@+id/tv_category_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/top_category"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp">

                </androidx.recyclerview.widget.RecyclerView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_serach_product_grid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp">

                </androidx.recyclerview.widget.RecyclerView>
                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:indeterminateTint="@color/start_start"
                    android:indeterminateTintMode="src_atop"
                    android:progressDrawable="@drawable/bg_progress_bar" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/pbar_container"
            android:gravity="center"
            android:visibility="gone"
            style="@style/ProgressBarContainer">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/start_progress"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="loading.json"
                app:lottie_loop="true"/>
        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>